-- Version 2.0.0, released ...

 * The way of painting layers, terrain and biomes has been changed. You now have a set of powerful new general painting tools, which can paint with any terrain, layer or biome you select
   + This means that instead of just selecting a layer or terrain in order to paint it, you must now select the "paint" (a layer, a terrain, a biome or an annotation colour) from one of the palettes *and* a painting tool from the top row of the tool box. For the old behaviour, select the Spray Paint tool (the top left button in the tool box, or Alt+r)
   + The new painting tools are powerful and flexible. They are:
     - The Spray Paint tool. This tool works exactly like the old way of painting layers, terrain and biomes. It applies the selected "paint" to the world in the shape of the current brush continuously as long as you hold down the mouse button
       o On/off layers (like Frost) and discrete layers (like Biomes and Annotations) are dithered
     - The Pencil. This is a line drawing tool which paints continuous lines of the selected "paint" by applying the current brush along a line
       o Paint freehand lines by clicking and dragging the mouse
       o Paint dots by clicking and releasing the mouse
       o Draw straight lines from the previously painted dot or line-end, by holding Shift while clicking the mouse
       o Constrain the lines to 45 degree angles by holding Ctrl while clicking. This works for freehand line drawing (Ctrl + drag) as well as for straight lines (Ctrl + Shift + click)
       o On/off layers (like Frost) and discrete layers (like Biomes and Annotations) are NOT dithered; they are applied where the brush intensity is 75% or higher
     - The Fill tool. This tool will fill whole areas of the world with the selected "paint"